<resources>
    <string name="app_name">HiBike</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_information">Profile Information</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="firebase_writing_doc_success">DocumentSnapshot successfully written!</string>
    <string name="firebase_writing_doc_fail">Error writing document</string>
    <string name="firebase_getting_docs_error">Error getting documents: </string>
    <string name="welcome">Welcome\u00A0</string>
    <string name="exclamation_mark">!</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="payment_information">Payment Information</string>
    <string name="checkLocationSetting_error">checkLocationSetting onFailure:</string>
    <string name="notification_channel_id">location</string>
    <string name="notification_channel_name">Location</string>
    <string name="notification_title">Tracking location…</string>
    <string name="notification_text">Location: null</string>
    <string name="scan">Scan</string>
    <string name="scan_error">Try again scanning…</string>
    <string name="start_renting">Renting is started…</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="distance">Distance:</string>
    <string name="decimal_pattern">##.###</string>
    <string name="km">\u00A0 km</string>
    <string name="pay_success">Pay successful,sign failed!</string>
    <string name="pay_cancel">Pay is cancelled!</string>
    <string name="pay_fail">Pay failed!</string>
    <string name="intent_error">Intent is null!</string>
    <string name="alert_message">You have an unpaid ride.</string>
    <string name="alert_neg">Cancel</string>
    <string name="alert_pos">Pay</string>
    <string name="paid">Paid</string>
    <string name="my_last_rides">My Last Rides</string>
    <string name="unpaid">Unpaid</string>
    <string name="payment">Payment</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="cal">cal</string>
    <string name="total_time">Total Time</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="total_dist">Total Distance</string>
    <string name="total_ride">Total Ride</string>
    <string name="ride">ride</string>
    <string name="km_h">km/h</string>
    <string name="hour">hour</string>
    <string name="weight">Weight</string>
    <string name="your_weight">Your weight:</string>
    <string name="sub_title_dialog">We need the following information to track your driving efficiently.</string>
    <string name="user_information">User Information</string>
    <string name="sub_title_progress">Please enter your weight on the <b>profile page</b> so that your calories burned can be calculated correctly.</string>
    <string name="ok">Ok</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_text">You\'ve reached your weekly calorie goal.</string>
    <string name="permissions_dialog_text">Permissions are required to use the application. Please allow them from the system settings.</string>
    <string name="go_settings">Go Settings</string>
    <string name="lets_move">You don\'t have a ride yet. Let\'s get moving!</string>

</resources>