<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/finishFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.finish.FinishFragment">

    <ProgressBar
        android:id="@+id/finishProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackFinishScreen"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_margin="@dimen/extra_small_margin_20"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitlePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textColor="@color/blue"
        android:textSize="@dimen/extra_medium_text"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/ivBackFinishScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.huawei.hms.maps.MapView
        android:id="@+id/mapViewFinishScreen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_300"
        android:layout_marginTop="@dimen/extra_small_margin_20"
        android:layout_marginHorizontal="@dimen/extra_small_margin_20"
        app:layout_constraintTop_toBottomOf="@id/ivBackFinishScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/extra_small_margin_20"
        android:layout_marginStart="@dimen/extra_small_margin_20"
        app:layout_constraintTop_toBottomOf="@id/mapViewFinishScreen"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDurationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            android:text="@string/duration"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDistanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            android:text="@string/distance"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/extra_small_margin_20"
        app:layout_constraintTop_toBottomOf="@id/mapViewFinishScreen"
        app:layout_constraintStart_toEndOf="@id/llTitles">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            tools:text="Amount"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            tools:text="Date"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            tools:text="Duration"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin_20"
            android:layout_marginStart="@dimen/extra_small_margin_20"
            tools:text="Distance"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPayAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_amount"
        android:textColor="@color/white"
        android:background="@drawable/bg_sign_out"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/llTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>